--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dev = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[project.scripts]
+tailleur = 'tailleur.cli:main'
+
 [tool.black]
 
 [tool.isort]
