Add SPDX headers
Change-Id: Ib8b782f12680d04264472e49960f7fd8893e6a65
Signed-off-by: Kienan Stewart <kstewart@efficios.com>

--- a/examples/benchmarks.yaml
+++ b/examples/benchmarks.yaml
@@ -1,4 +1,7 @@
 ---
+# SPDX-License-Identifier: GPL-2.0-only
+# SPDX-FileCopyrightText: 2026 Kienan Stewart <kstewart@efficios.com>
+
 search_paths:
   - /path/to/x
   - relative_to_cwd/x
