--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -1,4 +1,7 @@
 ---
+# SPDX-License-Identifier: GPL-2.0-only
+# SPDX-FileCopyrightText: 2026 Kienan Stewart <kstewart@efficios.com>
+
 runs: 2
 search_paths:
   - benchmarks/
